# aoc22

./: README.md  pyproject.toml
aoc22/: __main__.py  all_test.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  grid.py
