[tool.pdm]

[tool.pdm.scripts]
aoc22 = {cmd = "python -m aoc22"}
test = {cmd = "pytest aoc22"}

[project]
name = "aoc22"
version = "0.0.dev1"
description = "Advent of Code 2022 Solutions"
authors = [
    {name = "Ansel Horn", email = "dev@cahorn.net"},
]
dependencies = [
    "more-itertools>=9.1.0",
    "pytest>=7.4.0",
]
requires-python = ">=3.10"
license = {text = "WTFPL"}
